content/core/2.0.0/umbraco-v9/reference/vendr-umbraco/README.md
---
title: Vendr.Umbraco
description: API reference for Vendr.Umbraco in Vendr, the eCommerce solution for Umbraco
---
## Vendr.Umbraco assembly

| Namespace |
| --- |
| [Vendr.Core.Discounts.Rules](vendr-core-discounts-rules/) |
| [Vendr.Extensions](vendr-extensions/) |
| [Vendr.Umbraco](vendr-umbraco/) |
| [Vendr.Umbraco.Adapters](vendr-umbraco-adapters/) |
| [Vendr.Umbraco.Authorization](vendr-umbraco-authorization/) |
| [Vendr.Umbraco.Cache](vendr-umbraco-cache/) |
| [Vendr.Umbraco.Cache.Refreshers](vendr-umbraco-cache-refreshers/) |
| [Vendr.Umbraco.Configuration](vendr-umbraco-configuration/) |
| [Vendr.Umbraco.Content](vendr-umbraco-content/) |
| [Vendr.Umbraco.Discounts.Rewards](vendr-umbraco-discounts-rewards/) |
| [Vendr.Umbraco.Discounts.Rules](vendr-umbraco-discounts-rules/) |
| [Vendr.Umbraco.Events](vendr-umbraco-events/) |
| [Vendr.Umbraco.Events.Notification](vendr-umbraco-events-notification/) |
| [Vendr.Umbraco.Examine](vendr-umbraco-examine/) |
| [Vendr.Umbraco.Extractors](vendr-umbraco-extractors/) |
| [Vendr.Umbraco.Helpers](vendr-umbraco-helpers/) |
| [Vendr.Umbraco.Limiters](vendr-umbraco-limiters/) |
| [Vendr.Umbraco.Models](vendr-umbraco-models/) |
| [Vendr.Umbraco.Pipelines.Email.Tasks](vendr-umbraco-pipelines-email-tasks/) |
| [Vendr.Umbraco.PropertyEditors.Stock](vendr-umbraco-propertyeditors-stock/) |
| [Vendr.Umbraco.PropertyEditors.VariantsEditor](vendr-umbraco-propertyeditors-variantseditor/) |
| [Vendr.Umbraco.Providers](vendr-umbraco-providers/) |
| [Vendr.Umbraco.Resolvers](vendr-umbraco-resolvers/) |
| [Vendr.Umbraco.Security](vendr-umbraco-security/) |
| [Vendr.Umbraco.Services](vendr-umbraco-services/) |
| [Vendr.Umbraco.ValueConverters](vendr-umbraco-valueconverters/) |

<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Umbraco.dll -->
